<resources>
    <string name="app_name">Biblioteca Digital</string>

    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>
    <string name="Titulo_RL_Admin">Titulo</string>

    <string name="Txt_rol">Por favor elija un rol</string>
    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_lector">Lector</string>

    <string name="TxtRegistroAdmin">Registro de administrador</string>

    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_email_admin">Email</string>
    <string name="Et_Password_admin">Contraseña</string>
    <string name="Et_R_password_admin">Repita la contraseña</string>
    <string name="Btn_registrar_admin">Registrarme</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta</string>

    <string name="CerrarSesionAdmin">Cerrar Sesion</string>

    <string name="TxtLoginAdmin">Login Administradores</string>

    <string name="Btn_login_admin">Iniciar Sesion</string>

    <string name="Btn_agregar_categoria">Agregar categorias</string>
    <string name="Txt_agregar_categoria">Agregar categorias</string>
    <string name="Et_categoria">Ingrese la categoria</string>
    <string name="Agregar_categoria_DB">Agregar</string>

    <string name="Item_nombre_cat_a">Nombre categoria</string>
    <string name="Buscar_categoria">Buscar categoria</string>
    <string name="Txt_agregar_libro">Agregar libro</string>

    <string name="Et_titulo_libro">Titulo libro</string>
    <string name="Et_descripcion_libro"> Descripción libro</string>
    <string name="Tv_categoria_libro">Categoria</string>

    <string name="Btn_subir_libro">Subir</string>
    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoria</string>
    <string name="Et_buscar_libro_admin">Buscar libro</string>
    <string name="Txt_titulo_libro_item">Titulo libro</string>
    <string name="Txt_descripcion_libro_item"> Descripción libro</string>
    <string name="Txt_categoria_libro_admin">Categoria</string>
    <string name="Txt_tamanio_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>