<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Elegir_rol">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        
        <TextView
            android:text="@string/Txt_rol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_rol_administrador"
            android:text="@string/Btn_rol_administrador"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_rol_lector"
            android:text="@string/Btn_rol_lector"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>