<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.Agregar_pdf">

    <!--Toobar -->
    <RelativeLayout
        android:id="@+id/toolbarRLAgregarPdf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">


        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_agregar_libro"
            android:text="@string/Txt_agregar_libro"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_alignParentBottom="true"/>



    </RelativeLayout>

    <!--adjuntar -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/LlAdjuntarPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbarRLAgregarPdf">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
           android:src="@drawable/agregar_libro"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <ImageButton
            android:id="@+id/AdjuntarPdfIb"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_adjuntar_pdf"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--informacion libro -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_below="@id/LlAdjuntarPdf"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Titulo libro -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/Et_titulo_libro"
                android:hint="@string/Et_titulo_libro"
                android:drawableStart="@drawable/ic_pdf"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Descripcion libro -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/Et_descripcion_libro"
                android:hint="@string/Et_descripcion_libro"
                android:drawableStart="@drawable/ic_pdf"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--categoria seleccionada -->
        <TextView
            android:id="@+id/Tv_categoria_libro"
            android:hint="@string/Tv_categoria_libro"
            app:drawableStartCompat="@drawable/ic_categoria"
            app:drawableEndCompat="@drawable/ic_abajo"
            android:drawablePadding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:background="@drawable/forma_edittext"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--subir libro -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_subir_libro"
            android:text="@string/Btn_subir_libro"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />


        


    </androidx.appcompat.widget.LinearLayoutCompat>








</RelativeLayout>